examples/yaml/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
   name: update-docker-config
   namespace: kube-system
   labels:
     app: update-docker-config
spec:
   selector:
     matchLabels:
       name: update-docker-config
   template:
     metadata:
       labels:
         name: update-docker-config
     spec:
       containers:
         - resources:
             requests:
               cpu: 0.01
           image: registry.access.redhat.com/ubi9:latest
           name: sleepforever
           command: ["/bin/sh", "-c"]
           args:
             - >
               while true; do
                 sleep 100000;
               done
       hostPID: true
       volumes:
         - name: docker-auth-secret
           secret:
             secretName: docker-auth-secret
         - name: docker
           hostPath:
             path: /var/lib/kubelet/
         - name: bin
           hostPath:
             path: /usr/bin
         - name: lib64
           hostPath:
             path: /lib64
             hostPathType: Directory
