examples/yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-pod
  namespace: test
spec:
  containers:
  - name: hello-world-container
    image: docker.io/library/alpine
