examples/yaml/pip-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: nddemo-rg
  name: static-ip-lb
spec:
  loadBalancerIP: 40.85.175.56
  type: LoadBalancer
  ports:
  - port: 443
  selector:
    app: static-ip-lb
