examples/yaml/auth_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: entraid-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: entraid-gateway-certs
    hosts:
    - "*.apps.nddemo.8qm7.p3.openshiftapps.com"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.apps.nddemo.8qm7.p3.openshiftapps.com"
    tls:
      httpsRedirect: true
