examples/yaml/authz_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: entraid-authz
  namespace: istio-system
spec:
  rules:
  - from:
    - source:
        requestPrincipals: ["https://login.microsoftonline.com/64dc69e4-d083-49fc-9569-ebece1dd1408/v2.0/*"]
  - to:
    - operation:
        methods: ["GET", "POST"]
